# artoolkitx

Examples/Square tracking example/: main.cpp
Examples/Square tracking example/Windows/: CMakeLists.txt
Source/: CMakeLists.txt
Source/ARX/ARG/: arg_gl3.c
Source/ARX/ARVideo/: CMakeLists.txt  video.c  video2.c
Source/ARX/ARVideo/LeapMotion/: CMakeLists.txt  ExampleConnection.c  ExampleConnection.h  videoLeapMotion.c  videoLeapMotion.h
Source/ARX/ARVideo/include/ARX/ARVideo/: video.h
